--- a/home.html
+++ b/home.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="阮楚琳Chu-lin作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。" />
+    <meta name="description" content="阮楚琳作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。" />
     <title>Chu-lin's portfolio</title>
 
     <meta property="og:site_name" content="Chu-lin's portfolio" />
   
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Chu-lin's portfolio" />
-    <meta property="og:description" content="阮楚琳Chu-lin作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。" />
+    <meta property="og:description" content="阮楚琳作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。" />
     <meta property="og:image" content="https://chu000.github.io/Chulin/images/cover.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1080px" />
@@ -241,14 +241,14 @@
                         </div>
                         <div class="col-12  col-md-12    col-lg-12
                          col-xl-3 ">
-                            <p class="License">新北市第一屆街頭藝人認證</p>
+                            <p class="License">新北市第一屆街頭藝人</p>
 
                         </div>
 
 
                         <div class=" col-12  col-md-12    col-lg-12
                          col-xl-3 ">
-                            <p class="License">復興商工人像速寫高階檢定</p>
+                            <p class="License">復興商工高階人像速寫</p>
                         </div>
                     </div>
                 </div>
@@ -651,7 +651,7 @@
         // 害羞點擊-------------------------
         $('.littlechu svg').click(function () {
             $('.shybox').css('opacity', '0.9');
-            // $('.littlechu svg').css('opacity', '0.8');
+            $('.littlechu svg').css('opacity', '0.8');
         })
 
         // 手機版菜單點出--------------------
