阮楚琳作品集網站，運用網頁設計與Css、Html、Jquery...等程式撰寫，獨立製作過往經歷的分享。

--- a/home.html
+++ b/home.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="阮楚琳作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。" />
+    <meta name="description" content="阮楚琳作品集網站，運用網頁設計與Css、Html、Jquery...等程式撰寫，獨立製作過往經歷的分享。" />
     <title>Chu-lin's portfolio</title>
 
     <meta property="og:site_name" content="Chu-lin's portfolio" />
   
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Chu-lin's portfolio" />
-    <meta property="og:description" content="阮楚琳作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。" />
+    <meta property="og:description" content="阮楚琳作品集網站，運用網頁設計與Css、Html、Jquery...等程式撰寫，獨立製作過往經歷的分享。" />
     <meta property="og:image" content="https://chu000.github.io/Chulin/images/cover.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1080px" />
@@ -342,7 +342,7 @@
                             <p class="office">兼職 協助網路廣告、短片拍攝</p>
                             <p class="company">葉式特工 </p><br>
                             <p>1.負責演員殭屍妝容、翻模自製假皮.<br>2.側拍紀錄.<br>3.道具製作.</p>
-                            <a href="">More</a>
+                            <a href="workYes.html">More</a>
                         </div>
                     </div>
                     <div class="workwrap wrapYidu">
