--- a/workExtreme.html
+++ b/workExtreme.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="阮楚琳作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。"
+      content="阮楚琳作品集網站，運用網頁設計與Css、Html、Jquery...等程式撰寫，獨立製作過往經歷的分享。"
     />
     <title>Chu-lin's portfolio</title>
 
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Chu-lin's portfolio" />
     <meta
       property="og:description"
-      content="阮楚琳作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。"
+      content="阮楚琳作品集網站，運用網頁設計與Css、Html、Jquery...等程式撰寫，獨立製作過往經歷的分享。"
     />
     <meta
       property="og:image"
@@ -108,7 +108,7 @@
           </svg>
         </div>
         <div class="workarticle col-12 col-lg-6">
-          <p class="maingray50">主要工作內容：</p>
+          <p class="maingray50 mt-10">主要工作內容：</p>
           <p>
             1.活動網站的UI介面規劃.
             <br />
@@ -359,7 +359,7 @@
         />
       </div>
 
-      <div class="mymind">
+      <div class="notebox">
         <p>
           「Holyland 校際電競公開賽到此圓滿落幕，謝謝大 家！」，主持人 Albee清脆嘹亮的聲音，依然環繞在我 腦海裡。
          
