--- a/workFuntown.html
+++ b/workFuntown.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="阮楚琳作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。" />
+    <meta name="description" content="阮楚琳作品集網站，運用網頁設計與Css、Html、Jquery...等程式撰寫，獨立製作過往經歷的分享。" />
     <title>Chu-lin's portfolio</title>
 
     <meta property="og:site_name" content="Chu-lin's portfolio" />
   
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Chu-lin's portfolio" />
-    <meta property="og:description" content="阮楚琳作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。" />
+    <meta property="og:description" content="阮楚琳作品集網站，運用網頁設計與Css、Html、Jquery...等程式撰寫，獨立製作過往經歷的分享。" />
     <meta property="og:image" content="https://chu000.github.io/Chulin/images/cover.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1080px" />
@@ -110,7 +110,7 @@
 
             </div>
             <div class="workarticle col-12 col-lg-6">
-                <p class="maingray50">主要工作內容：</p>
+                <p class="maingray50 mt-10">主要工作內容：</p>
                 <p>1.遊戲活動Web/mobile 網頁設計與切板，撰寫html、css、規劃RWD.<br> 2.日本代理遊戲圖素在地化、Logo與banner設計，道具圖繪製.
                     <br> 3.百件實體周邊設計，例:吊飾、抱枕、年曆等等製作，供商城販售.
                     <br> 4.異業合作的活動宣傳印刷品（例:酷卡、產品外包裝等）和戶外大型輸出等平面設計. <br> 5.網路宣傳圖設計（Facebook、Google聯播網、各大入口媒體AD）. <br> 6.跨部門協助研發團隊，博弈遊戲APP UI介面優化.<br> 7.協助執行遊戲2D美術設計及ICON製作。
