--- a/workYes.html
+++ b/workYes.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="阮楚琳作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。"
+      content="阮楚琳作品集網站，運用網頁設計與Css、Html、Jquery...等程式撰寫，獨立製作過往經歷的分享。"
     />
     <title>Chu-lin's portfolio</title>
 
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Chu-lin's portfolio" />
     <meta
       property="og:description"
-      content="阮楚琳作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。"
+      content="阮楚琳作品集網站，運用網頁設計與Css、Html、Jquery...等程式撰寫，獨立製作過往經歷的分享。"
     />
     <meta
       property="og:image"
@@ -95,8 +95,8 @@
           <p>葉式特工Yes Ranger</p>
 
         </div>
-        <div class="workarticle col-12 col-lg-6">
-          <p class="maingray50">主要工作內容：</p>
+        <div class="workarticle col-12 col-lg-6 ">
+          <p class="maingray50 mt-10">主要工作內容：</p>
           <p>
             1.負責演員殭屍妝容、翻模自製假皮.
             <br>
@@ -306,7 +306,7 @@
         />
       </div>
 
- <div class="mymind">
+ <div class="notebox">
       <p>一直都很憧憬加入拍片現場的我，偶然得知有協助短片特殊化妝的需求，<br>我立刻答應，即便沒有做過，也不想錯過這個機會。<br>雖然害怕血腥的圖片，還是馬上蒐集相關資料、買材料、反覆練習，拿自己的臉練習，<br>不停地摸索，在很多次的失敗一點一點地去修正，不斷嘗試讓作品先求穩定再求變化。<br>
         愛上了雕刻、翻模與製作傷口假皮，創造恐怖的效果，不過還是 依然害怕看電影恐怖片，朋友們都覺得相當矛盾呢!<br>非常感謝拍攝團隊，在那次之後，也給我很多次機會跟拍，<br>很喜歡在現場側拍大家專注工作的眼神，非常美麗。 </p>
       </div>
