--- a/hobbyLine.html
+++ b/hobbyLine.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="阮楚琳作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。" />
+    <meta name="description" content="阮楚琳作品集網站，運用網頁設計與Css、Html、Jquery...等程式撰寫，獨立製作過往經歷的分享。" />
     <title>Chu-lin's portfolio</title>
 
     <meta property="og:site_name" content="Chu-lin's portfolio" />
   
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Chu-lin's portfolio" />
-    <meta property="og:description" content="阮楚琳作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。" />
+    <meta property="og:description" content="阮楚琳作品集網站，運用網頁設計與Css、Html、Jquery...等程式撰寫，獨立製作過往經歷的分享。" />
     <meta property="og:image" content="https://chu000.github.io/Chulin/images/cover.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1080px" />
