--- a/home.html
+++ b/home.html
@@ -487,7 +487,7 @@
                             <div class="maindraw hobbyBox"></div>
                             <p>繪畫創作</p>
                         </a>
-                        <a href="">
+                        <a href="hobbyToy.html">
                             <div class="maintoys hobbyBox"></div>
                             <p>玩具攝影</p>
                         </a>
