--- a/home.html
+++ b/home.html
@@ -483,7 +483,7 @@
                             <div class="mainline hobbyBox "></div>
                             <p>LINE貼圖創作</p>
                         </a>
-                        <a href="">
+                        <a href="hobbyDraw.html">
                             <div class="maindraw hobbyBox"></div>
                             <p>繪畫創作</p>
                         </a>
