補 工作手機說明頁

--- a/home.html
+++ b/home.html
@@ -321,7 +321,7 @@
                             <h2>Work experience</h2>
                             <p class="office">旺報編輯中心 美術編輯</p>
                             <p class="company">旺旺中時媒體集團</p><br>
-                            <p>1.報紙版面設計.<br>2.製表繪圖.</p>
+                            <p>1.報紙版面設計.<br>2.製表繪圖.</p><br>
 
                         </div>
                     </div>
@@ -332,7 +332,7 @@
                             <p class="company">鴻昌照相器材有限公司</p><br>
                             <p>
                                 1.協助拍賣網站管理.<br>2.製作商品行銷圖文.<br>3.網頁banner及EDM設計.<br>4.Logo品牌設計.<br>5.名片設計與店員專屬人像繪製.<br>6.協助包貨、出貨，及相關客服事項.<br>7.整理實體店面與倉庫.
-                            </p>
+                            </p><br>
 
                         </div>
                     </div>
@@ -341,7 +341,7 @@
                             <h2>Work experience</h2>
                             <p class="office">兼職 協助網路廣告、短片拍攝</p>
                             <p class="company">葉式特工 </p><br>
-                            <p>1.負責演員殭屍妝容、翻模自製假皮.<br>2.側拍紀錄.<br>3.道具製作.</p>
+                            <p>1.負責演員殭屍妝容、翻模自製假皮.<br>2.側拍紀錄.<br>3.道具製作.</p><br>
                             <a href="workYes.html">More</a>
                         </div>
                     </div>
@@ -350,7 +350,7 @@
                             <h2>Work experience</h2>
                             <p class="office"> 兼職 實習商業設計</p>
                             <p class="company">欣都有限公司</p><br>
-                            <p>1.協助參與（中國進出口商品交易會）展覽的海報及DM設計.<br>2.產品外包裝平面設計.</p>
+                            <p>1.協助參與（中國進出口商品交易會）展覽的海報及DM設計.<br>2.產品外包裝平面設計.</p><br>
 
                         </div>
                     </div>
@@ -360,7 +360,7 @@
                 <div class="workMobile">
                     <h2>Work experience</h2>
 
-                    <a href="workFuntown.html">
+                    <a href="./workFuntown.html">
                         <div class="wrapFuntown Mwrap  ">
                             <div class="WMobileList">
                                 <p>2018-2020</p>
@@ -369,7 +369,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="workExtreme.html">
+                    <a href="./workExtreme.html">
                         <div class="wrapExtreme Mwrap">
                             <div class="WMobileList">
                                 <p>2017-2018</p>
@@ -378,6 +378,7 @@
                             </div>
                         </div>
                     </a>
+                    <a href="./workWant(mobile).html">
                     <div class="wrapWant Mwrap">
                         <div class="WMobileList">
                             <p>2014-2017</p>
@@ -385,6 +386,8 @@
                             <p>旺旺中時媒體集團</p>
                         </div>
                     </div>
+                </a>
+                    <a href="./workHong(mobile).html">
                     <div class="wrapHong Mwrap">
                         <div class="WMobileList">
                             <p>2013-2014</p>
@@ -392,7 +395,8 @@
                             <p>鴻昌照相器材有限公司</p>
                         </div>
                     </div>
-                    <a href="workYes.html">
+                </a>
+                    <a href="./workYes.html">
                     <div class="wrapYes Mwrap">
                         <div class="WMobileList">
                             <p>2012-2014</p>
@@ -401,6 +405,7 @@
                         </div>
                     </div>
                 </a>
+                <a href="./workYidu(mobile).html"></a>
                     <div class="wrapYidu Mwrap">
                         <div class="WMobileList">
                             <p>2012-2014</p>
