--- a/home.html
+++ b/home.html
@@ -67,7 +67,8 @@
                     <div class="H1box">
                         <p>Looking For ? </p>
                         <h1>
-                            Web Designer <br>Graphic Designer<br>Illustrator</h1>
+                            Web Designer<br>Frontend Engineer<br>Illustrator 
+                            <!-- Graphic Designer--></h1>
                         <p>Check out my portfolio</p>
                     </div>
                     <img class="H1smokey" src="./images/header/H1smokey.png" alt="smokey">
