--- a/home.html
+++ b/home.html
@@ -474,7 +474,7 @@
                 </div>
               </div>
             </a>
-            <a href="./workYidu(mobile).html"></a>
+            <a href="./workYidu(mobile).html">
             <div class="wrapYidu Mwrap">
               <div class="WMobileList">
                 <p>2012-2014</p>
@@ -482,6 +482,7 @@
                 <p>欣都有限公司</p>
               </div>
             </div>
+          </a>
           </div>
         </div>
         <div class="swiper-slide" id="Performance">
