--- a/hobbyLine.html
+++ b/hobbyLine.html
@@ -84,9 +84,9 @@
             <p> <span class="fw"> 兔福&土撥喵 </span> Twofu & Meow <br> 一隻外表看似兔子的蝙蝠 和 一直在土裡的可愛貓貓 </p>
             <div class="row">
 
-                <img class="lazyload" data-src="./images/hobby_line/twofu (1).png" alt=""><img class="lazyload" data-src="./images/hobby_line/twofu (2).png" alt=""><img class="lazyload" data-src="./images/hobby_line/twofu (3).png" alt=""><img class="lazyload"
+                <img class="lazyload" data-src="./images/hobby_line/twofu (1).gif" alt=""><img class="lazyload" data-src="./images/hobby_line/twofu (2).png" alt=""><img class="lazyload" data-src="./images/hobby_line/twofu (3).png" alt=""><img class="lazyload"
                     data-src="./images/hobby_line/twofu (4).png" alt=""><img class="lazyload" data-src="./images/hobby_line/twofu (5).png" alt=""><img class="lazyload" data-src="./images/hobby_line/twofu (6).png" alt=""><img class="lazyload" data-src="./images/hobby_line/twofu (7).png"
-                    alt=""><img class="lazyload" data-src="./images/hobby_line/twofu (8).png" alt=""><img class="lazyload" data-src="./images/hobby_line/twofu (9).png" alt=""><img class="lazyload" data-src="./images/hobby_line/twofu (10).png" alt="">
+                    alt=""><img class="lazyload" data-src="./images/hobby_line/twofu (8).png" alt=""><img class="lazyload" data-src="./images/hobby_line/twofu (9).png" alt=""><img class="lazyload" data-src="./images/hobby_line/twofu (10).gif" alt="">
             </div>
             <div class="hobbyBTN"> <a href="https://store.line.me/search/zh-Hant?q=Twofu%20%26%20Meow" target="_blank">More</a></div>
         </div>
