--- a/workYes.html
+++ b/workYes.html
@@ -307,8 +307,8 @@
       </div>
 
  <div class="notebox">
-      <p>一直都很憧憬加入拍片現場的我，偶然得知有協助短片特殊化妝的需求，<br>我立刻答應，即便沒有做過，也不想錯過這個機會。<br>雖然害怕血腥的圖片，還是馬上蒐集相關資料、買材料、反覆練習，拿自己的臉練習，<br>不停地摸索，在很多次的失敗一點一點地去修正，不斷嘗試讓作品先求穩定再求變化。<br>
-        愛上了雕刻、翻模與製作傷口假皮，創造恐怖的效果，不過還是 依然害怕看電影恐怖片，朋友們都覺得相當矛盾呢!<br>非常感謝拍攝團隊，在那次之後，也給我很多次機會跟拍，<br>很喜歡在現場側拍大家專注工作的眼神，非常美麗。 </p>
+      <p>一直都很憧憬加入拍片現場的我，偶然得知有協助短片特殊化妝的需求，我立刻答應，即便沒有做過，也不想錯過這個機會。雖然害怕血腥的圖片，還是馬上蒐集相關資料、買材料、反覆練習，拿自己的臉練習，不停地摸索，在很多次的失敗一點一點地去修正，不斷嘗試讓作品先求穩定再求變化。
+        愛上了雕刻、翻模與製作傷口假皮，創造恐怖的效果，不過還是 依然害怕看電影恐怖片，朋友們都覺得相當矛盾呢!非常感謝拍攝團隊，在那次之後，也給我很多次機會跟拍，很喜歡在現場側拍大家專注工作的眼神，非常美麗。 </p>
       </div>
 
     </div>
