--- a/hobbyDraw.html
+++ b/hobbyDraw.html
@@ -91,6 +91,7 @@
         <h2>Hobby</h2>
         繪畫創作
       </div>
+    </div>
       <div class="notebox">
         <p>
           在生活中充滿藝術，處處充滿美的事物令我陶醉。
@@ -98,7 +99,7 @@
           小時候喜愛畫畫，總是無憂無慮地揮灑，沒學過真正的繪畫技巧，直到高中就讀美工科，讓我對繪畫的感受有了大轉變，學習了專業技術才知道藝術與設計的領域有多麼廣大，開始懂得增加更多耐心去創作、更加懂得珍惜作品。喜歡保持著歸零的心態去嘗試不同的藝文事物，親自嘗試過才能享受到那些甘醇與苦澀，並投入情感去延伸新的創作、開發新的領域。
         </p>
       </div>
-
+      <div class="container">
       <div class="picBox">
         <img
           alt="電腦繪圖"
