--- a/hobbyLine.html
+++ b/hobbyLine.html
@@ -76,10 +76,12 @@
     <div class="container">
         <div class="hobbyTitle">
             <h2>Hobby </h2> Line貼圖創作</div>
+        </div>
         <div class="notebox">
             <p>一開始純粹是看到LINE的貼圖審核機制變快，先前聽說審核時間非常長，心血來潮想投一個試試它審核速度，就漸漸地投出興趣。 平時會想想自己需要什麼貼圖，利用下班或假日時間在家繪畫貼圖，不到一年的時間出了快20組，成效也算不錯有動力持續著；在製作動態貼圖時，會默默地想起以前在大學讀動畫設計系的感覺。
             </p>
         </div>
+        <div class="container">
         <div class="HBbgLine">
             <p> <span class="fw"> 兔福&土撥喵 </span> Twofu & Meow <br> 一隻外表看似兔子的蝙蝠 和 一直在土裡的可愛貓貓 </p>
             <div class="row">
