--- a/home.html
+++ b/home.html
@@ -634,8 +634,7 @@
               </a>
             </div>
             <div class="hobbytext"><p>
-              唱歌(劇)／逛玩具店／玩電玩／看漫畫／觀賞歌舞劇／看超級好笑卡通或美劇／看電影／待在安靜的環境／散步／不專業但很專注的拍攝／看房屋室內擺設／觀察人類的動作／分析個性／隨著當下的情緒聽音樂／出國旅遊／欣賞畫作（肖像、西方神話、人文風俗）／逛展覽／跳舞／做重訓／寄卡片／閱讀勵志心靈成長書籍／關注星座運勢／特殊化妝（殭屍）／繪畫（壓克力、水彩、素描、電繪、麥克筆、油畫
-              ...）／坐公車看沿途風景／觀賞姿體練習體操／劇場武功拉筋</p>
+              唱歌(劇)／逛玩具店／玩電玩／看漫畫／觀賞歌舞劇／看超級好笑卡通或美劇／看電影／待在安靜的環境／散步／不專業但很專注的拍攝／看房屋室內擺設／觀察人類的動作／分析個性／隨著當下的情緒聽音樂／出國旅遊／欣賞畫作（肖像、西方神話、人文風俗）／逛展覽／跳舞／做重訓／寄卡片／閱讀勵志心靈成長書籍／關注星座運勢／特殊化妝（殭屍）／繪畫（壓克力、水彩、素描、電繪、麥克筆、油畫...）／坐公車看沿途風景／觀賞姿體練習體操／劇場武功拉筋</p>
             </div>
           </div>
           <footer>
