--- a/home.html
+++ b/home.html
@@ -40,6 +40,8 @@
     <link rel="stylesheet" href="./css/layout_mobile.css" type="text/css" />
     <link rel="stylesheet" href="./css/for_swiper.css" type="text/css" />
     <link rel="stylesheet" href="./css/for_boos.css" type="text/css" />
+
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@200;300;400;500;600;700;900&family=Roboto:wght@200;300;400;500;600;700;900&display=swap" rel="stylesheet">
   </head>
 
   <body>
