--- a/home.html
+++ b/home.html
@@ -279,19 +279,19 @@
             <!-- 列表 -->
             <ul class="worklist">
               <li>
-                <p>2018-2020</p>
+                <p>2018 - 2021</p>
                 <h3>遊戲視覺設計</h3>
               </li>
               <li>
-                <p>2017-2018</p>
+                <p>2017 - 2018</p>
                 <h3>活動視覺設計</h3>
               </li>
               <li>
-                <p>2014-2017</p>
+                <p>2014- 2017</p>
                 <h3>報社美術編輯</h3>
               </li>
               <li>
-                <p>2013-2014</p>
+                <p>2013 - 2014</p>
                 <h3>電商平面設計</h3>
               </li>
               <li class="warning">
@@ -435,7 +435,7 @@
             <a href="./workFuntown.html">
               <div class="wrapFuntown Mwrap">
                 <div class="WMobileList">
-                  <p>2018-2020</p>
+                  <p>2018 Apr - 2020 Dec</p>
                   <h3>遊戲視覺設計</h3>
                   <p>和信超媒體股份有限公司戲谷分公司</p>
                 </div>
@@ -444,7 +444,7 @@
             <a href="./workExtreme.html">
               <div class="wrapExtreme Mwrap">
                 <div class="WMobileList">
-                  <p>2017-2018</p>
+                  <p>2017 Jun - 2018 Mar</p>
                   <h3>活動視覺設計</h3>
                   <p>極限電競股份有限公司</p>
                 </div>
@@ -453,7 +453,7 @@
             <a href="./workWant(mobile).html">
               <div class="wrapWant Mwrap">
                 <div class="WMobileList">
-                  <p>2014-2017</p>
+                  <p>2014 Jul - 2017 May</p>
                   <h3>報社美術編輯</h3>
                   <p>旺旺中時媒體集團</p>
                 </div>
@@ -462,7 +462,7 @@
             <a href="./workHong(mobile).html">
               <div class="wrapHong Mwrap">
                 <div class="WMobileList">
-                  <p>2013-2014</p>
+                  <p>2013 Aug - 2014 Au</p>
                   <h3>電商平面設計</h3>
                   <p>鴻昌照相器材有限公司</p>
                 </div>
