--- a/home.html
+++ b/home.html
@@ -122,14 +122,18 @@
               2009年 復興商工 美工科<br>2013年 世新大學 數位多媒體設計學系  動畫設計組</p> -->
               <p>在設計領域約有 8 年的工作經驗，主要執行包含</p>
               <div>
+                <div class="dot"></div>
                 <h4>網頁設計與切版</h4>
+                <div class="dot"></div>
                 <h4>美術圖繪製（電繪／手繪）</h4>
+                <div class="dot"></div>
                 <h4>插畫角色設計</h4>
-
+                <div class="dot"></div>
                 <h4>大圖輸出及印刷品排版</h4>
                 <br />
-
+                <div class="dot"></div>
                 <h4>行銷圖文創作</h4>
+                <div class="dot"></div>
                 <h4>視覺識別系統設計</h4>
               </div>
             </div>
