--- a/home.html
+++ b/home.html
@@ -466,7 +466,7 @@
             <a href="./workHong(mobile).html">
               <div class="wrapHong Mwrap">
                 <div class="WMobileList">
-                  <p>2013 Aug - 2014 Au</p>
+                  <p>2013 Aug - 2014 Aug</p>
                   <h3>電商平面設計</h3>
                   <p>鴻昌照相器材有限公司</p>
                 </div>
