--- a/workFuntown.html
+++ b/workFuntown.html
@@ -39,7 +39,10 @@
     <link rel="stylesheet" href="./css/layout_mobile.css" type="text/css" />
     <link rel="stylesheet" href="./css/for_swiper.css" type="text/css" />
     <link rel="stylesheet" href="./css/for_boos.css" type="text/css" />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@200;300;400;500;600;700;900&family=Roboto:wght@200;300;400;500;600;700;900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@200;300;400;500;600;700;900&family=Roboto:wght@200;300;400;500;600;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -212,6 +215,11 @@
         />
         <img
           class="lazyload"
+          data-src="./images/work20funtown/funPIC (6).png"
+          alt="用illustrator軟體插畫繪製"
+        />
+        <img
+          class="lazyload"
           data-src="./images/work20funtown/funPIC (1).jpg"
           alt="行銷周邊設計-扇子、茶罐腰封"
         />
@@ -288,9 +296,20 @@
         />
         <img
           class="lazyload"
+          data-src="./images/work20funtown/funPIC (27).jpg"
+          alt="網頁設計與切版"
+        />
+        <img
+          class="lazyload"
+          data-src="./images/work20funtown/funPIC (28).jpg"
+          alt="網頁設計與切版"
+        />
+        <img
+          class="lazyload"
           data-src="./images/work20funtown/funPIC (19).jpg"
           alt="合成圖製作與文字設計"
         />
+
         <img
           class="lazyload"
           data-src="./images/work20funtown/funPIC (20).jpg"
@@ -356,11 +375,7 @@
           data-src="./images/work20funtown/funPIC (5).png"
           alt="異業合作Banner設計"
         />
-        <img
-          class="lazyload"
-          data-src="./images/work20funtown/funPIC (6).png"
-          alt="用illustrator軟體插畫繪製"
-        />
+
         <img
           class="lazyload"
           data-src="./images/work20funtown/funPIC (7).png"
@@ -453,31 +468,31 @@
     <script>
       // 手機版菜單點出--------------------
 
-      $('.menu').click(function () {
-        $('.navbarM').css('transform', 'translate3d(0px,0px,0px)')
-      })
-      $('.close').click(function () {
-        $('.navbarM').css('transform', 'translate3d(-1200px,0px,0px)')
-      })
+      $(".menu").click(function () {
+        $(".navbarM").css("transform", "translate3d(0px,0px,0px)");
+      });
+      $(".close").click(function () {
+        $(".navbarM").css("transform", "translate3d(-1200px,0px,0px)");
+      });
 
       //---------------------------------手機版的nav的表 第幾個跳第幾個-----------------------
-      $('.navListM li').click(function () {
+      $(".navListM li").click(function () {
         // mobile在nav取LI第幾個的值
-        let navLi = $('.navListM li').index(this)
+        let navLi = $(".navListM li").index(this);
 
-        localStorage.localIndex = navLi
+        localStorage.localIndex = navLi;
         //回到主頁給他 傳數值 指定到第幾頁
-      })
+      });
 
       // pop圖片------------------------------------------
-      $('.picBox img').click(function () {
+      $(".picBox img").click(function () {
         // 定義 取出圖片位置的值
-        let imgSrc = $(this).attr('src')
-        let imgAlt = $(this).attr('alt')
-        console.log('call', imgSrc)
-        console.log('call', imgAlt)
+        let imgSrc = $(this).attr("src");
+        let imgAlt = $(this).attr("alt");
+        console.log("call", imgSrc);
+        console.log("call", imgAlt);
         // 在body增加div
-        $('body').append(` 
+        $("body").append(` 
          <div class="popup"></div>
     <div class="popBox">
         <img class="lazyload" data-src="" alt="">
@@ -485,49 +500,49 @@
         <p></p>
     </div>
     
-`)
+`);
         // 換圖
-        $('.popBox img').attr('src', imgSrc)
+        $(".popBox img").attr("src", imgSrc);
         // 換字
-        $('.popBox p').text(imgAlt)
+        $(".popBox p").text(imgAlt);
         // 關閉
-        $('.popclose').click(function () {
-          console.log('hi')
-          $('.popup').remove()
-          $('.popBox').remove()
-        })
+        $(".popclose").click(function () {
+          console.log("hi");
+          $(".popup").remove();
+          $(".popBox").remove();
+        });
         // 點擊黑遮罩關閉
-        $('.popup').click(function () {
-          $('.popup').remove()
-          $('.popBox').remove()
-        })
-      })
+        $(".popup").click(function () {
+          $(".popup").remove();
+          $(".popBox").remove();
+        });
+      });
       // 到達一定位置跑出
       $(window).scroll(function () {
         // console.log('scroll',$(this).scrollTop())
 
         if ($(this).scrollTop() > 800) {
-          $('.goTOP').css('transform', 'translateX(0px)')
+          $(".goTOP").css("transform", "translateX(0px)");
         } else {
-          $('.goTOP').css('transform', 'translateX(100px)')
+          $(".goTOP").css("transform", "translateX(100px)");
         }
-      })
+      });
       // 點了跑上去TOP
-      $('.goTOP').click(function () {
-        $('html,body').animate(
+      $(".goTOP").click(function () {
+        $("html,body").animate(
           {
             scrollTop: 0,
           },
-          700,
-        )
-      })
+          700
+        );
+      });
 
       // 點back 回到主頁給他  pageIndex,的數值----  前面通过点击a标签跳转到index.html指定某个slide位置
 
-      $('.back').click(function () {
+      $(".back").click(function () {
         /* 存储名字为 localIndex , 值为 1 的变量 如下两种方法 */
-        localStorage.localIndex = 2
-      })
+        localStorage.localIndex = 2;
+      });
     </script>
   </body>
 </html>
